header alignment fixes

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -56,9 +56,6 @@ body{
 
 
 
-.padng_left_none{padding-left:0;}
-
-
 
 .padng_right_none{padding-right:0;}
 
@@ -2903,11 +2900,6 @@ ul, ol {
 @media (max-width: 767px) {
 
 	
-
-	.padng_left_none{padding-left:15px;}
-
-
-
 	.padng_right_none{padding-right:15px;}
 
 	
@@ -2998,6 +2990,11 @@ ul, ol {
 
 	.col-xs-6 .prodct_box{border:1px solid #cccccc; min-height: 300px; margin:0 0px 15px;}
 
+}
+
+@media (min-width: 767px) and (max-width: 991px) {
+
+	.padng_left_none{padding-left:0;}
 }
 
 
@@ -3265,11 +3262,6 @@ ul, ol {
 	
 
 	.logo img{width:auto;}
-
-	
-
-	.padng_left_none{padding-left:15px;}
-
 
 
 	.padng_right_none{padding-right:15px;}
